# simple_etl

./: .env  csv_to_prisma.py  main.py  pyproject.toml  schema.prisma
input/: crs.csv
migrations/20250601082927_init/: migration.sql
pipelines/: csv_to_postgres_beam.py  test.py
schemas/: .gitkeep  Crs_column_mapping.json
